kogito-quarkus/addons/fabric8-kubernetes-service-catalog/runtime/src/test/resources/route/route.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: test-route
  labels:
    app: example-dc-with-service
spec:
  host: >-
    test-route.org
  to:
    kind: Service
    name: example-dc-with-service
    weight: 100
  port:
    targetPort: web
  wildcardPolicy: None
status:
  ingress:
  - host: >-
      test-route.org
    routerName: default
    conditions:
    - type: Admitted
      status: 'True'
      lastTransitionTime: '2022-08-22T18:14:25Z'
    wildcardPolicy: None
    routerCanonicalHostname: >-
      test-route.org
